--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* { padding: 5px; margin: 5px; }
+* { padding: 5px;}
 
 body {
     font-family: "Courier New", Courier, monospace;
@@ -67,11 +67,9 @@ body {
     color: beige;
     position: absolute;
     bottom: 0;
-    left: 0;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 10px;
-    width: 100%;
-    padding: 10px;
+    width: 95%;
+
 }
